--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "homepage": "https://github.com/krati1711/NodeJS#readme",
   "devDependencies": {
     "nodemon": "^2.0.4"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "save": "^2.4.0"
   }
 }
